tests/NormalTests/paczka1/fuzzy1/89162295.err
Error in line 5: ABYG3 A222 50,9
Error in line 27: nuUcwvy A99 58,1
Error in line 31: nuUcwvy A222 67,0
